--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="section-center">
         <h3>tired of boring lorem ipsum</h3>
-        <form class="lorem-action">
+        <form class="lorem-form">
             <label for="amount">paragraphs:</label>
             <input type="number" name="amount" id="amount" placeholder="5">
             <button type="submit" class="btn">generate</button>
